dnl Copyright 2001 Enhanced Software Technologies Inc.
dnl Written Jan. 2001 Eric Lee Green

dnl Process this file with autoconf to produce a configure script.
AC_INIT(mtx.cpp)
AC_CONFIG_HEADER(config.h)

dnl Check system.
AC_CANONICAL_SYSTEM
AC_PREFIX_DEFAULT(/usr/local)

case "$host_os" in
  *linux*) AC_DEFINE(LINUX)
	TARGET=linux
    ;;
  *solaris*) AC_DEFINE(SOLARIS)
	TARGET=solarissparc
	;;
  *sunos*)  TARGET=solarissparc
	 ;;
  *freebsd*) TARGET=freebsd86
	;;
  *aix*) TARGET=aix
       ;;
  *irix*) TARGET=sgi
      ;;
  *hp*) TARGET=hpux
     ;;
  *HP*) TARGET=hpux
     ;;
  *sequent*) AC_DEFINE(SEQUENT) 
	;;
  *MINGW*) TARGET=mingw
     ;;
  *MinGW*) TARGET=mingw
     ;;
  *mingw*) TARGET=mingw
     ;;
  *) TARGET=$host_os
     ;;
esac
AC_SUBST(TARGET)
case "$host_cpu" in
  # force us down to '386 if we're on some other machine. 
 *?86*) host_cpu='i386'
	CPU=386
	;;
  *) CPU=$host_cpu;
       ;;
esac

AC_SUBST(CPU)


dnl Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL
AC_CHECK_PROG(USE_OBJCOPY, objcopy, yes, no)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(\
	unistd.h \
	stdlib.h \
	errno.h \
	fcntl.h \
	stdarg.h \
	string.h \
	scsi/scsi.h \
	scsi/scsi_ioctl.h \
	scsi/sg.h \
	sys/gscdds.h \
	camlib.h \
	cam/cam_ccb.h \
	cam/scsi/scsi_message.h \
	sys/fsid.h \
	sys/fstyp.h \
	sys/stat.h \
	sys/types.h \
	sys/mnttab.h \
	sys/param.h \
	sys/time.h \
	sys/scsi/impl/uscsi.h \
	sys/scsi.h \
	sys/scsi_ctl.h \
	sys/ioctl.h \
	sys/mtio.h \
	sys/param.h \
	dslib.h \
	du/defs.h \
	ddk/ntddscsi.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_TYPE_PID_T       
AC_HEADER_TIME
AC_STRUCT_TM
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
AC_C_BIGENDIAN



dnl Checks for library functions.
dnl AC_FUNC_ALLOCA

AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(memset)

dnl Check for files

AC_OUTPUT(Makefile)
